--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
@@ -9,6 +9,6 @@
   "bracketSameLine": false,
   "arrowParens": "always",
   "endOfLine": "lf",
-  "vueIndentScriptAndStyle": true,
+  "vueIndentScriptAndStyle": false,
   "proseWrap": "preserve"
 }
