--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "format": "prettier --write .",
     "-----ESLINT-----": "exit 0",
     "lint:check": "eslint .",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "-----HUSKY-----": "exit 0",
+    "prepare": "husky"
   },
   "dependencies": {
     "@nuxt/content": "3.7.1",
@@ -39,12 +41,23 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@nuxt/eslint": "^1.9.0",
     "eslint": "^9.38.0",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
     "prettier": "3.6.2",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.2"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "prettier --write",
+      "eslint . --fix"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
