--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -24,6 +24,9 @@ jobs:
           node-version: '22'
           cache: 'pnpm'
 
+      - name: Install pnpm
+        run: corepack enable && corepack prepare pnpm@latest --activate
+
       # 3️⃣ Install dependencies
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
