--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dayjs": "^1.11.18",
     "nuxt": "^4.2.0",
     "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "4.5.0",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "tailwindcss": "^4.1.16",
     "vite": "^7.1.12",
     "vue": "^3.5.22",
