--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@tailwindcss/vite": "^4.1.16",
     "better-sqlite3": "^12.4.1",
     "dayjs": "^1.11.18",
+    "motion-v": "^1.7.4",
     "nuxt": "^4.2.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "tailwindcss": "^4.1.16",
+    "three": "^0.181.0",
     "vite": "^7.1.12",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
