--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "motion-v": "^1.7.4",
     "nuxt": "^4.2.0",
     "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "^4.5.0",
+    "pinia-plugin-persistedstate": "4.5.0",
     "tailwindcss": "^4.1.16",
     "three": "^0.181.0",
     "vite": "^7.1.12",
