--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@nuxt/content": "3.7.1",
+    "@nuxt/content": "^3.10.0",
     "@nuxt/devtools": "2.6.5",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "2.1.0",
@@ -29,7 +29,7 @@
     "@nuxtjs/i18n": "10.1.1",
     "@pinia/nuxt": "0.11.2",
     "@tailwindcss/vite": "^4.1.16",
-    "better-sqlite3": "^12.4.1",
+    "better-sqlite3": "^12.5.0",
     "dayjs": "^1.11.18",
     "motion-v": "^1.7.4",
     "nuxt": "^4.2.0",
